--- a/ramdisk/init.java_ss_baffinlite.rc
+++ b/ramdisk/init.java_ss_baffinlite.rc
@@ -159,8 +159,8 @@ on boot
 	setprop sys.io.scheduler noop
 # SISO-ANDR_PERF :: END
 
-    setprop ro.build.product hawaii
-    setprop ro.product.device hawaii
+    setprop ro.build.product java
+    setprop ro.product.device java
     
     chown system system /sys/devices/platform/panel/backlight/panel/brightness
     mount debugfs /sys/kernel/debug /sys/kernel/debug
@@ -442,8 +442,8 @@ on charger
     write /sys/devices/platform/s5p-ehci/power/control auto
 			  
 on fs
-    mount_all /fstab.hawaii_ss_logands
-#	swapon_all fstab.hawaii_ss_logands
+    mount_all /fstab.java_ss_baffinlite
+#	swapon_all fstab.java_ss_baffinlite
 	
     setprop ro.crypto.fuse_sdcard true
 
